--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hot-toast": "^2.6.0",
     "react-player": "^3.3.3",
     "react-router-dom": "^7.9.4",
+    "react-youtube": "^10.1.0",
     "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
